# card-fraud-rule-management

./: .claudeignore  .dockerignore  .doppler-template.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  TODO.md  docker-compose.local.yml  env.example  example_usage.py  platform-adapter.yaml  pyproject.toml
.github/workflows/: README.md
.github/workflows-disabled/: ci.yml  deploy.yml
app/: main.py
app/api/routes/: approvals.py  field_registry.py  health.py  rules.py  (+4 more)
app/compiler/: ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  __init__.py  canonicalizer.py  compiler.py  validator.py
app/core/: audit.py  auth.py  config.py  db.py  dependencies.py  dotenv.py  errors.py  middleware.py  notifications.py  observability.py  optimistic_lock.py  rate_limit.py  request_logging.py  security_middleware.py  telemetry.py  validators.py
app/db/: __init__.py  models.py  validators.py
app/domain/: __init__.py  enums.py
app/repos/: __init__.py  approval_repo.py  common.py  field_registry_manifest_repo.py  pagination.py  rule_field_repo.py  rule_field_version_repo.py  rule_repo.py  ruleset_repo.py
app/services/: __init__.py  field_registry_publisher.py  rule_simulation.py  ruleset_publisher.py
cli/: _runner.py  auth0_bootstrap.py  auth0_cleanup.py  auth0_verify.py  autonomous_live_test.py  db_local.py  db_setup.py  dev.py  doppler_local.py  format.py  infra_check.py  lint.py  objstore_local.py  openapi.py  platform_adapter.py  test.py  test_all.py  test_e2e.py  test_smoke.py  test_v.py
db/: create_users.sql  fraud_governance_schema.sql  local_setup.sql  production_indexes.sql  seed_all_tables.sql  seed_rule_fields.sql
db/migrations/: add_idempotency_key.sql  add_optimistic_locking.sql  add_optimistic_version.sql
docs/: README.md  codemap.md
docs/01-setup/: CLEAN_SLATE_RESET.md  DATABASE_SETUP_GUIDE.md  NEW-USER-SETUP-GUIDE.md  README.md  auth0-automation.md  auth0-setup-guide.md  auth0-setup.md  clean-slate-reset.md  database-setup.md  doppler-secrets-setup.md  local-setup.md  neon-api-reference.md  new-user-setup-guide.md  s3-setup.md  verification.md
docs/02-development/: README.md  architecture.md  compiler.md  workflow.md
docs/03-api/: README.md  api.md  openapi.json  pagination.md  reference.md  ruleset-publisher.md  ui-integration.md
docs/04-testing/: README.md
docs/05-deployment/: README.md  choreo-deployment.md  docker-setup.md  doppler-secrets-setup.md  github-actions-cd.md  production-checklist.md  troubleshooting.md
docs/06-operations/: README.md  monitoring.md  runbooks.md  security-hardening.md
docs/07-reference/: 0001-use-doppler-for-secrets-management.md  0002-uuidv7-for-all-identifiers.md  0003-postgresql-jsonb-hybrid-storage.md  0004-maker-checker-governance.md  0005-deterministic-rule-compiler.md  0006-control-plane-runtime-separation.md  0007-velocity-state-runtime-only.md  README.md  auth-model.md  domain-model.md  external-card_fraud_rule_engine_runtime_decisions.md  external-expectations_from_rule_management.md  overview.md
hooks/: protect-secrets.js
prometheus/: alert_rules.yml  grafana_dashboard.json
scripts/: DATABASE_SCRIPTS.md  add_version_column.py  apply_migration.py  autonomous_live_test.py  check_db_connection.py  cleanup_auth0.py  debug_endpoints.py  doppler-setup.ps1  doppler-setup.sh  dump_openapi.py  fetch_neon_connections.py  generate_local_urls.py  generate_openapi.py  healthcheck.py  load_test.js  load_test_locust.py  local_api_tests.py  local_endpoints.json  local_full_setup.py  neon_full_setup.py  publish_ruleset_to_s3.py  reset_schema.py  run_dev.ps1  seed_rule_fields.py  setup_auth0.py  setup_auth0_reference_unified.py  setup_database.py  setup_neon.py  sync_doppler_db_urls.py  test_auth_integration.py  test_pagination.py  test_telemetry_setup.py  verify_auth0.py  verify_idempotency.py
scripts/autonomous_lib/: __init__.py  db_assertions.py  http_client.py  reporter.py  scenario.py  seeding.py  validation.py
scripts/autonomous_scenarios/: 01_smoke.yaml  02_rule_field_crud.yaml  03_rule_lifecycle.yaml  04_ruleset_v1_lifecycle.yaml  05_governance_maker_checker.yaml  05_ruleset_publish.yaml
scripts/manual_checks/: README.md  check_auth_integration.py  check_telemetry_setup.py
tests/: conftest.py  pytest_html_report.py  test_e2e_integration_api.py  test_e2e_integration_postgres.py  test_integration_compiler.py  test_integration_concurrent.py  test_integration_publisher.py  test_observability_security.py  test_pagination_edge_cases.py  test_smoke_integration_approvals_lifecycle.py  test_smoke_integration_rule_field_crud.py  test_unit_api_approvals.py  test_unit_api_rule_fields.py  test_unit_api_rules.py  test_unit_api_rulesets.py  test_unit_approval_repo.py  test_unit_approvals_endpoints.py  test_unit_audit.py  test_unit_common_async.py  test_unit_compiler.py  test_unit_compiler_nplus1_fix.py  test_unit_compiler_validator_extra.py  test_unit_config_db_url.py  test_unit_config_region.py  test_unit_db.py  test_unit_db_url_normalization.py  test_unit_dependencies.py  test_unit_error_handling.py  test_unit_health.py  test_unit_keyset_pagination.py  test_unit_main.py  test_unit_middleware.py  test_unit_observability.py  test_unit_optimistic_lock.py  test_unit_rate_limit.py  test_unit_request_logging.py  test_unit_rule_fields_endpoints.py  test_unit_rules_approval.py  test_unit_ruleset_publisher.py  test_unit_telemetry.py  (+3 more)
tests/test_unit_security/: test_circuit_breaker.py  test_jwks_cache.py  test_jwt_verification.py  test_permissions.py  test_utils.py
(+12 files in other folders)
