# ⚠️ AI AGENTS: This project uses DOPPLER for secrets (NEVER .env files)
# Use: `uv run doppler-local`, `uv run doppler-test` (NOT `uv run dev`, `uv run test`)
# See: AGENTS.md for canonical instructions

[project]
name = "card-fraud-rule-management"
version = "0.1.0"
description = "Fraud rule governance + compilation control-plane (FastAPI)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "asyncpg>=0.31.0",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27",
  "prometheus-client>=0.21",
  "opentelemetry-api>=1.28",
  "opentelemetry-sdk>=1.28",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
  "opentelemetry-instrumentation-httpx>=0.49b0",
  "opentelemetry-exporter-otlp>=1.28",
  "opentelemetry-semantic-conventions>=0.49b0",
  "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-html>=4.1",
  "ruff>=0.8",
  "pyflakes>=3.0",
  "pre-commit>=3.6",
  "pyyaml>=6.0",
]

[project.scripts]
# Development
dev = "cli.dev:main"

# Auth0 bootstrap, verification, and cleanup
auth0-bootstrap = "cli.auth0_bootstrap:main"
auth0-verify = "cli.auth0_verify:main"
auth0-cleanup = "cli.auth0_cleanup:main"

# Doppler Development (with secrets from Doppler)
doppler-local = "cli.doppler_local:main"
doppler-local-test = "cli.doppler_local:test_local"
doppler-test-local = "cli.doppler_local:test_local"
doppler-test = "cli.doppler_local:test"
doppler-prod = "cli.doppler_local:test_prod"
doppler-autonomous-test = "cli.doppler_local:autonomous_test"
doppler-autonomous-test-reset = "cli.doppler_local:autonomous_test_reset"

# Local Database Management
db-local-up = "cli.db_local:up"
db-local-down = "cli.db_local:down"
db-local-reset = "cli.db_local:reset"

# Local Object Storage Management (MinIO)
objstore-local-up = "cli.objstore_local:up"
objstore-local-down = "cli.objstore_local:down"
objstore-local-reset = "cli.objstore_local:reset"
objstore-local-verify = "cli.objstore_local:verify"

# Local Infrastructure (PostgreSQL + MinIO)
infra-check = "cli.infra_check:check"
infra-local-up = "cli.objstore_local:infra_up"
infra-local-down = "cli.objstore_local:infra_down"

# Local Full Setup
local-full-setup = "cli.db_setup:local_full_setup"

# Neon Setup
neon-setup = "cli.db_setup:neon_setup"
neon-full-setup = "cli.db_setup:neon_full_setup"

# Database Setup with Doppler
db-init = "cli.db_setup:db_init"
db-init-local = "cli.db_setup:db_init"
db-init-test = "cli.db_setup:db_init_test"
db-init-prod = "cli.db_setup:db_init_prod"
db-reset-data = "cli.db_setup:db_reset_data"
db-reset-data-local = "cli.db_setup:db_reset_data"
db-reset-schema = "cli.db_setup:db_reset_schema"
db-reset-schema-local = "cli.db_setup:db_reset_schema"
db-reset-data-test = "cli.db_setup:db_reset_data_test"
db-reset-schema-test = "cli.db_setup:db_reset_schema_test"
db-reset-data-prod = "cli.db_setup:db_reset_data_prod"
db-reset-schema-prod = "cli.db_setup:db_reset_schema_prod"
db-verify = "cli.db_setup:db_verify"
db-verify-local = "cli.db_setup:db_verify"
db-verify-test = "cli.db_setup:db_verify_test"
db-verify-prod = "cli.db_setup:db_verify_prod"
db-sync-doppler-urls = "cli.db_setup:db_sync_doppler_urls"
db-seed-demo = "cli.db_setup:db_seed_demo"

# Testing
test = "cli.test:main"
test-v = "cli.test_v:main"
test-all = "cli.test_all:main"
test-smoke = "cli.test_smoke:main"
test-e2e = "cli.test_e2e:main"

# Autonomous Live Testing (Local-Only)
autonomous-live-test = "cli.autonomous_live_test:main"

# Code Quality
lint = "cli.lint:main"
format = "cli.format:main"

# Code Generation
openapi = "cli.openapi:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "cli"]
exclude = ["db*", "hooks*", "scripts*", "tests*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","UP","B"]
ignore = [
    "E501",  # Line too long (already enforced at 100, some docstrings/urls are longer)
    "B904",  # Exception chaining (verbose, not required for this project)
    "E741",  # Ambiguous variable name `l` (lowercase L)
]

[tool.ruff.lint.per-file-ignores]
"app/api/routes/*.py" = ["B008"]
"app/core/dependencies.py" = ["B008"]
"app/core/security/jwt_verification.py" = ["B008"]
"app/core/security/permissions.py" = ["B008"]
"tests/*" = ["B017"]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=prepend",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-branch",
    "-m", "not e2e_integration",
    "--html=htmlreports/index.html",
    "--self-contained-html",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning:.*coroutine.*was never awaited",
]
markers = [
    "unit: Fast unit tests with mocked dependencies (default, 224 tests)",
    "smoke: Smoke tests with real DB flows but TestClient",
    "e2e_integration: End-to-end tests with real server, real HTTP, and real Auth0",
]
# Using anyio_mode = "auto" per AnyIO testing docs
# pytest-asyncio uses default strict mode (no asyncio_mode)
anyio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
